--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Title: Multiscale Covariance Scanning and related Algorithms
 Version: 0.0.0.9000
 Authors@R: c(
   person("Haeran", "Cho", email = "haeran.cho@bristol.ac.uk", role=c("aut"),
-          comment = c(ORCID = "YOUR-ORCID-ID")),
+          comment = c(ORCID = "0000-0002-0725-8704")),
   person("Tobias", "Kley", email = "tobias.kley@uni-goettingen.de", role=c("aut","cre"),
-          comment = c(ORCID = "YOUR-ORCID-ID")),
+          comment = c(ORCID = "0000-0003-4790-9695")),
   person("Housen", "Li",  email = "housen.li@mathematik.uni-goettingen.de", role=c("aut"),
-          comment = c(ORCID = "YOUR-ORCID-ID")))
+          comment = c(ORCID = "0000-0002-2434-9878")))
 Description: Implements function for inference of changes in high-dimensional
   linear regression; cf. TODO refer to arxiv preprint.
 Imports:
