--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,8 @@ export(lope)
 export(post_process)
 export(rnd_interval)
 importFrom(PRIMAL,Dantzig_solver)
+importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,glmnet)
+importFrom(graphics,abline)
+importFrom(graphics,lines)
+importFrom(stats,quantile)
