--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(bts_cov_stat)
 export(clom)
 export(cp_scan)
+export(interval)
 export(lambdapath)
 export(lope)
 export(post_process)
@@ -13,3 +14,4 @@ importFrom(glmnet,glmnet)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(stats,quantile)
+useDynLib(inferchange)
