--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: inferchange
-Title: Multiscale Covariance Scanning and related Algorithms
+Title: Multiscale Covariance Scanning and Related Algorithms
 Version: 0.0.0.9000
 Authors@R: c(
   person("Haeran", "Cho", email = "haeran.cho@bristol.ac.uk", role=c("aut"),
