--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
   person("Housen", "Li",  email = "housen.li@mathematik.uni-goettingen.de", role=c("aut"),
           comment = c(ORCID = "0000-0002-2434-9878")),
   person("Solt", "Kovacs", email = "solt.kovacs@stat.math.ethz.ch", role=c("ctb"),
-          comment = "The function interval() is taken from https://github.com/kovacssolt/ChangePoints"))
+          comment = "The function seeded_interval() is a copy of interval() from https://github.com/kovacssolt/ChangePoints"))
 Description: Implements function for inference of changes in high-dimensional
   linear regression; cf. TODO refer to arxiv preprint.
 Imports:
@@ -20,4 +20,4 @@ URL: http://github.com/inferchange/quantspec
 BugReports: http://github.com/tobiaskley/inferchange/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
