--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 S3method(plot,inferchange.ci)
 S3method(plot,inferchange.cp)
+S3method(print,inferchange.ci)
 S3method(print,inferchange.cp)
 export(McScan)
 export(ci_delta)
 export(clom)
+export(dgp_gauss_sparse)
+export(inferchange)
 export(lambdapath)
 export(lope)
 export(seeded_interval)
@@ -14,8 +17,11 @@ importFrom(PRIMAL,PSM_solver)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(graphics,abline)
+importFrom(graphics,arrows)
 importFrom(graphics,matplot)
 importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
 importFrom(stats,cov)
 importFrom(stats,mad)
 importFrom(stats,quantile)
