--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,14 @@ BugReports: http://github.com/tobiaskley/inferchange/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Collate: 
+    'CLOM.R'
+    'LOPE.R'
+    'McScan.R'
+    'confidence.R'
+    'dgp.R'
+    'inferchange-package.R'
+    'inferchange.R'
+    'interval.R'
+    'plots.R'
+    'utils.R'
