--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,10 @@ Authors@R: c(
 Description: Implements function for inference of changes in high-dimensional
   linear regression; cf. TODO refer to arxiv preprint.
 Imports:
+  ggplot2,
   glmnet,
-  PRIMAL
+  PRIMAL,
+  viridis
 License: GPL (>= 3)
 URL: http://github.com/inferchange/quantspec
 BugReports: http://github.com/tobiaskley/inferchange/issues
