--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(inferchange)
 export(lambdapath)
 export(lope)
 export(seeded_interval)
+import(ggplot2)
 importFrom(PRIMAL,Dantzig_solver)
 importFrom(PRIMAL,PSM_solver)
 importFrom(glmnet,cv.glmnet)
@@ -25,4 +26,7 @@ importFrom(graphics,points)
 importFrom(stats,cov)
 importFrom(stats,mad)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(viridis,scale_fill_viridis)
 useDynLib(inferchange)
