--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,16 @@ export(seeded_interval)
 import(ggplot2)
 importFrom(PRIMAL,Dantzig_solver)
 importFrom(PRIMAL,PSM_solver)
+importFrom(ggplot2,geom_count)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,scale_size_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(graphics,abline)
