--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Author: Haeran Cho [aut] (<https://orcid.org/0000-0002-0725-8704>),
   Solt Kovacs [ctb] (The function seeded_interval() is a copy of interval() from https://github.com/kovacssolt/ChangePoints)
 Maintainer: Tobias Kley <tobias.kley@uni-goettingen.de>
 Description: Implements function for inference of changes in high-dimensional
-  linear regression; cf. TODO refer to arxiv preprint.
+  linear regression; cf. arXiv preprint arXiv:2402.06915.
 Imports:
   ggplot2,
   glmnet,
