--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
+importFrom(graphics,legend)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(stats,cov)
