--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(graphics,arrows)
 importFrom(graphics,legend)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(gridExtra,grid.arrange)
 importFrom(stats,cov)
 importFrom(stats,mad)
 importFrom(stats,quantile)
